--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/server.js",
-  "type": "module",
+  "main": "./src/server.ts",
   "scripts": {
-    "build": "tsc --watch",
-    "start": "nodemon dist/server.js",
+    "build": "rimraf ./build && tsc",
+    "start:dev": "npx nodemon",
+    "start": "npm run build && node build/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/node": "^18.15.3",
     "nodemon": "^2.0.21",
+    "rimraf": "^4.4.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   }
