--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,21 +1,16 @@
 {
-    "compilerOptions": {
-        "module": "NodeNext",
-        "esModuleInterop": true,
-        "target": "ES6",
-        "moduleResolution": "NodeNext",
-        "outDir": "dist",
-        "sourceMap": true,
-        "types": [
-            "node"
-        ]
-    },
-    "include": [
-        "src/**/*.ts",
-        "server.ts"
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "lib": [
+      "es6"
     ],
-    "exclude": [
-        "node_modules",
-        "**/*.spec.ts"
-    ]
+    "allowJs": true,
+    "outDir": "build",
+    "rootDir": "src",
+    "strict": true,
+    "noImplicitAny": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true
+  }
 }
