--- a/social-connect/package.json
+++ b/social-connect/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-image-crop": "^10.0.9",
     "react-redux": "^8.0.5",
     "sass": "^1.59.3",
     "typescript": "5.0.2"
